@@ -24,6 +24,7 @@
 %% @deftypeopx Constructor @@sym {@var{x} =} sym (@var{y}, @var{assumestr1}, @var{assumestr2}, @dots{})
 %% @deftypeopx Constructor @@sym {@var{x} =} sym (@var{A}, [@var{n}, @var{m}])
 %% @deftypeopx Constructor @@sym {@var{x} =} sym (@var{y}, @var{ratflag})
+%% @deftypeopx Constructor @@sym {@var{x} =} sym (@var{handle})
 %% Define symbols and numbers as symbolic expressions.
 %%
 %% @var{y} can be an integer, a string or one of several special
@@ -218,6 +219,22 @@
 %% @end group
 %% @end example
 %%
+%% Anonymous functions can be converted to symbolic expressions by
+%% passing their function handle:
+%% @example
+%% @group
+%% f = @@(n, x) sin (pi*besselj (n, x)/2)
+%%   @result{} f = @@(n, x) sin (pi * besselj (n, x) / 2)
+%% class (f)
+%%   @result{} function_handle
+%% sym(f)
+%%   @result{} (sym)
+%%          ⎛π⋅besselj(n, x)⎞
+%%       sin⎜───────────────⎟
+%%          ⎝       2       ⎠
+%% @end group
+%% @end example
+%%
 %% It is also possible to save sym objects to file and then load them when
 %% needed in the usual way with the @code{save} and @code{load} commands.
 %%
@@ -273,6 +290,24 @@ function s = sym(x, varargin)
             ['creating a cell array of sym using "sym(cell)" is deprecated;\n' ...
              '         future versions will instead create a sym array.']);
     s = cell_array_to_sym (x, varargin{:});
+    return
+  end
+
+  if (isa (x, 'function_handle'))
+    assert (nargin == 1)
+    %% Need argnames of the handle.  TODO: can do better than regex?
+    T = regexp (func2str (x), '^\@\((?:(\w+)(?:, ))*(\w+)?\).*', 'tokens');
+    assert (length (T) == 1)
+    T = T{1};
+    v = cell (size (T));
+    for i = 1:length (T)
+      v{i} = sym (sprintf ('Symbol("%s")', T{i}));
+    end
+    %% call the function with those arguments as symbolic inputs
+    s = x (v{:});
+    if (~ isa (s, 'sym'))  % e.g., for "@(x) 7"
+      s = sym (s);
+    end
     return
   end
 
@@ -925,3 +960,18 @@ end
 %! assert (isequal (C1{2,3}, 6*x))
 %! assert (isequal (C1{1,3}, sym(3)))
 %! assert (isa (C1{1,3}, 'sym'))
+
+%!test
+%! % function_handle
+%! f = @(x, y) y*sin(x);
+%! syms x y
+%! assert (isequal (sym (f), y*sin(x)));
+%! f = @(x) 42;
+%! assert (isequal (sym (f), sym (42)));
+%! f = @() 42;
+%! assert (isequal (sym (f), sym (42)));
+
+%!error <ndefined>
+%! % function_handle
+%! f = @(x) A*sin(x);
+%! sym (f)
